@@ -80,6 +80,7 @@ extern void free_pages(unsigned long addr, unsigned int order);
 #define EXT3_FT_SYMLINK		EXT2_FT_SYMLINK
 #define EXT3_N_BLOCKS		EXT2_N_BLOCKS
 #define EXT3_DIR_PAD		EXT2_DIR_PAD
+#define EXT3_ROOT_INO		EXT2_ROOT_INO
 #define EXT3_FEATURE_COMPAT_DIR_PREALLOC	EXT2_FEATURE_COMPAT_DIR_PREALLOC
 #define EXT3_FEATURE_COMPAT_IMAGIC_INODES	EXT2_FEATURE_COMPAT_IMAGIC_INODES
 #define EXT3_FEATURE_COMPAT_EXT_ATTR		EXT2_FEATURE_COMPAT_EXT_ATTR
